# cl4p-tp-v2

./: .gitmodules  CMakeLists.txt
res/: cl4ptp.db
src/: ClapTrap.cpp  ClapTrap.h  DBUtilities.cpp  DBUtilities.h  LongPoll.cpp  LongPoll.h  SqlWrapper.cpp  SqlWrapper.h  main.cpp  main.h  sql_utils.cpp  sql_utils.h
